[package]
name = "sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui                   = "0.19.0"
crossterm             = "0.26.0"
tokio-terminal-resize = "0.1.0"
rlua                  = "0.19.4"
num                   = "0.4.0"
